--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,27 @@
 name: End-to-end tests
-on: push
+on: [push]
+
 jobs:
   cypress-run:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: src
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
-      # Install dependencies with caching
-      # and run all Cypress tests
-      - name: Cypress run
-        uses: cypress-io/github-action@v7
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: src/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Cypress
+        run: npx cypress run
