Ajuste no CI para rodar apenas testes API

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress
+      - name: Run Cypress (API)
         run: npx cypress run
