--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run Cypress (API)
-        run: npx cypress run
+        
+      - name: Run Cypress (API) #quando for pra rodar todos os testes, retirar o (API) e o --spec
+        run: npx cypress run --spec "cypress/e2e/api/**/*.feature" 
